menu visibility fixed

--- a/mod3-solution/css/styles.css
+++ b/mod3-solution/css/styles.css
@@ -4,7 +4,7 @@
 #sush{background: #A8CD1B}
 #beef{background: #74AFAD}
 
-.navbar-light.navbar-toggler{border-color: white;}
+.navbar-ligh.tnavbar-toggler{border-color: white;}
 
 a.navbar-brand.webtitle {
 	text-align: center;
